--- a/HiveFour/pages/front-end sya/Delete Account.html
+++ b/HiveFour/pages/front-end sya/Delete Account.html
@@ -67,7 +67,7 @@
         </a>
     </th>
     <th>
-        <a href=".html">
+        <a href="About Us.html">
         ABOUT US
         </a>
     </th>
