--- a/HiveFour/pages/front-end sya/checkout.html
+++ b/HiveFour/pages/front-end sya/checkout.html
@@ -117,7 +117,7 @@
                     </a>
                 </th>
                 <th>
-                    <a href=".html">
+                    <a href="About Us.html">
                     ABOUT US
                     </a>
                 </th>
