--- a/HiveFour/pages/front-end sya/status.html
+++ b/HiveFour/pages/front-end sya/status.html
@@ -109,7 +109,7 @@
                     </a>
                 </th>
                 <th>
-                    <a href=".html">
+                    <a href="About Us.html">
                     ABOUT US
                     </a>
                 </th>
