--- a/HiveFour/pages/front-end sya/About Us.html
+++ b/HiveFour/pages/front-end sya/About Us.html
@@ -6,6 +6,9 @@
 	<head>
 		<style>
 			body{
+        		margin:0;
+      		}
+			body{
 				background-image: url(Untitled\ design\ \(1\).png);
             	background-repeat: no-repeat;
 				background-size: cover;
@@ -70,12 +73,12 @@
 			</th>
 			<td colspan=2><img src="design 1.png"  style="width:80px; height:80px;"></td>
 			<th style="padding-left:60px;">
-				<a href="LOGIN.html">
+				<a href="login.php">
 					LOGIN
 				</a>
 			</th>
 			<th>
-				<a href="REGISTER.html">
+				<a href="register1.php">
 					REGISTER
 				</a>
 			</th>
