--- a/HiveFour/pages/front-end sya/checkout.html
+++ b/HiveFour/pages/front-end sya/checkout.html
@@ -5,6 +5,9 @@
 	<title>Hive4 Checkout</title>
 	<head>
 		<style>
+            body{
+                margin:0;
+            }
             #one{
                 width: 70%;
                 background-color: #E6DAD1;
