--- a/HiveFour/pages/front-end sya/Delete Account.html
+++ b/HiveFour/pages/front-end sya/Delete Account.html
@@ -4,7 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Hive4 Account Deletion</title>
-    <style>			
+    <style>
+    body{
+        margin:0;
+      }			
     #header{
         width:100%;
         background-image: url('header bg pattern.png');
