--- a/HiveFour/pages/front-end sya/REGISTER.html
+++ b/HiveFour/pages/front-end sya/REGISTER.html
@@ -5,6 +5,9 @@
 	<title>Hive4 REGISTER</title>
 	<head>
 		<style>
+      body{
+        margin:0;
+      }
 			body{
 				background-image: url(loginbg.png);
         background-repeat: no-repeat;
