--- a/HiveFour/pages/front-end sya/cart.html
+++ b/HiveFour/pages/front-end sya/cart.html
@@ -6,6 +6,9 @@
     <title>Hive4 Shopping Cart</title>
     <style>
         body{
+            margin:0;
+        }
+        body{
             background-color: #E6DAD1;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         }
