--- a/HiveFour/pages/front-end sya/VIEW ACCOUNT DETAILS.html
+++ b/HiveFour/pages/front-end sya/VIEW ACCOUNT DETAILS.html
@@ -140,7 +140,7 @@
 		</tr>
 		<tr>
 			<td style="text-align:center">
-				<a href="LOGIN.html">
+				<a href="login.php">
 					<img src="log out.png">
 				</a>
 			</td>
