change file location
admin login to login

--- a/HiveFour/pages/front-end mirah/admin view account.html
+++ b/HiveFour/pages/front-end mirah/admin view account.html
@@ -119,7 +119,7 @@
 		</tr>
 		<tr>
 			<td style="text-align:center">
-				<a href="admin login.php">
+				<a href="login.php">
 					<img src="log out.png">
 				</a>
 			</td>
