--- a/HiveFour/pages/front-end mirah/admin login.html
+++ b/HiveFour/pages/front-end mirah/admin login.html
@@ -72,7 +72,7 @@
 		</tr>
 	</table>
 	<br><br><br><br>
-	<form action="admin login.php" method="post">
+	<form action="login.php" method="post">
 		<table id=login border="0">
 			<tr>
 				<th colspan=2 style="padding:10px; font-size: 40px; font-family: 'Times New Roman', serif;"">LOGIN</th>
